# astesiabot-rust

./: .gitignore  CLAUDE.md  Cargo.toml  EFRecipeCalculator.md  LICENSE  Procfile  README.md  askama.toml
.claude/: settings.json
data/: birthdayRev.yaml  customOperatorZhToJa.yaml  recruitmentOperators.json
data/golden/operator_cost_calc/: elite_kelsey_esperanza.json  list_master_star5.json  list_star6_elite.json  master_amiya_warrior_s1.json  module_astesia.json
data/risei/: constRiseiValues.py  price_kakin.yaml
data/seed/: ark_matrix.json  ark_stages.json  fk_data.json  formulas.json  item_names.json  operator_data.json  operator_names.json  skill_data.json  skill_names.json  zones.json
data/uranai/: toolList.yaml
docs/: migrate-moderation.md  refactor-send-separation.md
src/: api.rs  lib.rs  main.rs
src/api/: api.rs  mod.rs  recruitment.rs
src/api/ef_recipe_calculator/: mod.rs  solver.rs
src/api/wl_battery_simulator/: battery_sim.rs  mod.rs  optimizer.rs
src/bot/: channels.rs  data.rs  handler.rs  mod.rs  reply.rs  utils.rs
src/bot/commands/: add.rs  echo.rs  fksearch.rs  mod.rs  ping.rs
src/bot/services/: anniversary.rs  birthday.rs  koukai_kyujin.rs  mod.rs  moderation.rs  reply_dispatch.rs  spam.rs  uranai.rs
src/bot/utils/: env.rs  mod.rs  xlsx.rs
src/engine/: mod.rs  operator_names.rs
src/engine/external_source/: ark_stages.rs  fk_data.rs  formulas.rs  http.rs  item_names.rs  mod.rs
src/engine/fk_data_search/: dto.rs  mod.rs  search.rs
src/engine/operator_cost_calc/: aggregate.rs  calc.rs  (+3 more)
src/recruit/: calc.rs  mod.rs  model.rs
(+83 files in other folders)
