[package]
name = "astesiabot-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
poise = "0.6"
axum = { version = "0.7", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
fancy-regex = "0.13"
itertools = "0.13"
chrono = "0.4"
chrono-tz = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
askama = { version = "0.12", features = ["serde-json"] }
tower-http = { version = "0.5", features = ["fs"] }
nalgebra = "0.33"
rand = "0.8"
indexmap = { version = "2", features = ["serde"] }
base64 = "0.22"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
